unpackaged/main/default/objects/Contact/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account.ShippingStreet &amp; BR() &amp;
Account.ShippingCity &amp; BR() &amp;
Account.ShippingPostalCode &amp; BR() &amp;
Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>