unpackaged/main/default/objects/Contact/fields/Best_form_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Best_form_of_Communication__c</fullName>
    <description>The best way to reach the Contact</description>
    <label>Best form of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>