unpackaged/main/default/objects/Contact/fields/Book_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Book_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for authorised contacts who can book jobs</description>
    <inlineHelpText>Check if the contact is authorised to book jobs</inlineHelpText>
    <label>Book Jobs</label>
    <type>Checkbox</type>
</CustomField>