unpackaged/main/default/objects/Contact/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>