unpackaged/main/default/objects/Contact/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>Type of client at the site</description>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Type</valueSetName>
    </valueSet>
</CustomField>