unpackaged/main/default/objects/Contact/fields/Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notes__c</fullName>
    <description>Any relevant notes on the Contact (maximum of 1,000 characters)</description>
    <inlineHelpText>Any relevant notes on the Contact (maximum of 1,000 characters)</inlineHelpText>
    <label>Contact Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>