unpackaged/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approvers</fullName>
            </value>
            <value>
                <fullName>Bill Payer</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Home Owner</fullName>
            </value>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>Key Holder</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Managing Agent</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>On-Site Contact - Not Bill Payer</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>Person available on Site</fullName>
            </value>
            <value>
                <fullName>Project Manager - Third Party</fullName>
            </value>
            <value>
                <fullName>Site Contact</fullName>
            </value>
            <value>
                <fullName>Tenant/Person Living on Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>