unpackaged/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant/Person Living on Site</fullName>
            </value>
            <value>
                <fullName>Site Contact</fullName>
            </value>
            <value>
                <fullName>Person available on Site</fullName>
            </value>
            <value>
                <fullName>Approvers</fullName>
            </value>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>Bill Payer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>