unpackaged/main/default/objects/Contact/fields/Contacts_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Time_Zone__c</fullName>
    <description>The Time Zone the Contact lives in, e.g. Poland - Europe/Warsaw</description>
    <inlineHelpText>The Time Zone the Contact lives in, e.g. Poland - Europe/Warsaw</inlineHelpText>
    <label>Contacts Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>purecloud__Time_Zones</valueSetName>
    </valueSet>
</CustomField>