unpackaged/main/default/objects/Contact/fields/Costs_and_Quotes_Approver__c.field-meta.xml
<CustomField>
    <fullName>Costs_and_Quotes_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for costs and quotes approver</description>
    <inlineHelpText>Check if the contact can approve costs and quotes</inlineHelpText>
    <label>Costs and Quotes Approver</label>
    <type>Checkbox</type>
</CustomField>