unpackaged/main/default/objects/Contact/fields/E164_format_Phone__c.field-meta.xml
<CustomField>
    <fullName>E164_format_Phone__c</fullName>
    <formula>&quot;+44&quot; &amp; MID(SUBSTITUTE( Phone , &quot; &quot;, &quot;&quot;), 2, LEN(SUBSTITUTE( Phone , &quot; &quot;, &quot;&quot;))-1) 


/*&quot;+44&quot; &amp; MID(Phone, 2, LEN(Phone)-1) */
/*SUBSTITUTE( Phone , &quot; &quot;, &quot;&quot;)*/</formula>
    <label>E164 format Phone</label>
    <type>Text</type>
</CustomField>