unpackaged/main/default/objects/Contact/fields/Job_Name_with_Rating_From_MC__c.field-meta.xml
<CustomField>
    <fullName>Job_Name_with_Rating_From_MC__c</fullName>
    <description>This field is created to store Job Name with Rating and it will get populated from MC. Whenever MC receives review on SMS of particular Job related to contact, then will be sent value to this field.</description>
    <label>Job Name with Rating From MC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>