unpackaged/main/default/objects/Contact/fields/Key_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Type__c</fullName>
    <label>Key Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estate Agent</fullName>
            </value>
            <value>
                <fullName>Business Management</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>House Staff</fullName>
            </value>
            <value>
                <fullName>Neighbour</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Key Access (No on site contact)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>