unpackaged/main/default/objects/Contact/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>The Contacts preferred language, e.g. Polish, English etc</description>
    <inlineHelpText>The Contacts preferred language, e.g. Polish, English etc</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>