unpackaged/main/default/objects/Contact/fields/Related_Inactive_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Inactive_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Inactive User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>