unpackaged/main/default/objects/Contact/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Site_Type</valueSetName>
    </valueSet>
</CustomField>