unpackaged/main/default/objects/Contact/fields/testeremal__c.field-meta.xml
<CustomField>
    <fullName>testeremal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testeremal</label>
    <type>Checkbox</type>
</CustomField>