unpackaged/main/default/objects/Contact/validationRules/Check_The_Site_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_The_Site_Type</fullName>
    <active>false</active>
    <description>The Site type should match the Account Record Type</description>
    <errorConditionFormula>AND
	(
	Account.RecordType.DeveloperName &lt;&gt; &quot;Supplier&quot;,

OR( AND( NOT(ISBLANK(AccountId))
, Account.RecordType.DeveloperName != TEXT(Site_Type__c)),
AND( NOT(ISBLANK( Site__c ))
,  
Site__r.Account__r.RecordType.DeveloperName != TEXT(Site_Type__c))

))</errorConditionFormula>
    <errorDisplayField>Site_Type__c</errorDisplayField>
    <errorMessage>The Account record type should match the Site Type i.e. If the Account record type is Commercial then the Site Type should be Commercial.</errorMessage>
</ValidationRule>