unpackaged/main/default/objects/Contact/validationRules/Need_Key_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Key_Contact</fullName>
    <active>false</active>
    <description>DO NOT ACTIVATE</description>
    <errorConditionFormula>AND( ISBLANK(TEXT( Key_Contact_Type__c) ) ,  Is_Primary_Contact__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Key_Contact_Type__c</errorDisplayField>
    <errorMessage>If this is the primary contact, a Key contact Type needs to be selected</errorMessage>
</ValidationRule>