unpackaged/main/default/objects/Contact/validationRules/Site_Contact_status_or_key_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Contact_status_or_key_contact</fullName>
    <active>false</active>
    <description>A contact can cannot be a key contact if they have a contact status</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Contact_Status__c, &quot;&quot;)),NOT(ISPICKVAL(Key_Contact_Type__c, &quot;&quot;)))</errorConditionFormula>
    <errorMessage>Contact cannot be a key contact if contact status is selected</errorMessage>
</ValidationRule>